fix:font size on mobile

--- a/masjid-app/src/components/custom-button/custom-button.styles.scss
+++ b/masjid-app/src/components/custom-button/custom-button.styles.scss
@@ -28,3 +28,15 @@
   border: 1px solid #333;
   color: #333;
 }
+
+//Tablets
+@media(max-width: 768px){
+  .custom-button {
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: auto;
+    padding: 0 35px 0 35px;
+    font-size: small;
+    border-radius: 24px;
+  }
+}
