--- a/masjid-app/src/pages/admin-page/admin-page.styles.scss
+++ b/masjid-app/src/pages/admin-page/admin-page.styles.scss
@@ -86,6 +86,9 @@
                 #f2{
                     margin: 0;
                 }
+                #c1{
+                    margin-top: 10px;
+                }
             }
         }
         .register-solah{
